# gp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
src/gp/: __init__.py  main.py
