[project]
name = "gp"
version = "0.1.0"
description = "A good practice repo for futur development"
readme = "README.md"
authors = [
    { name = "Sébastien De Vos", email = "sebastien.devos@euranova.eu" }
]
requires-python = "~=3.11.0"

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
]

[dependency-groups]

dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
    "ty>=0.0.1a3",
    {include-group = "test"},
    {include-group = "tracing"},
    {include-group = "visualisation"},
]

test = [
    "pytest>=8.3.5",
]

tracing = [
    "mlflow>=2.22.0",
]

visualisation = [
    "matplotlib>=3.10.3",
    "plotly>=6.1.0",
    "seaborn>=0.13.2",
]

[tool.uv]
default-groups = [] # to not include dev by default


[tool.ruff]
line-length = 120
exclude = ["**/*.ipynb"] # Exclude Notebooks from linting and formatting

[tool.ruff.lint]
select = [
    "I",    # isort rules
    "ANN",  # enforce type annotations for arguments and return types
    "AIR",  # Airflow specific rules
    "FAST", # FastAPI specific rules
    "E",    # pycodestyle (error)
    "F",    # pyflakes
    "B",    # bugbear
    "B9",
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "PIE",  # flake8-pie
    "PGH",  # pygrep-hooks
    "PYI",  # flake8-pyi
    "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-unresolved-reference = "warn"
possibly-unbound-attribute = "error"
possibly-unbound-import = "error"

[tool.ty.environment]
python = "./.venv" # should be the default value I think (when full release comes out)

[tool.pre-commit]
show_elapsed_time = true


[project.scripts]
gp = "gp:main"

[build-system]
requires = ["uv_build>=0.7.4,<0.8"]
build-backend = "uv_build"
